# hunnu-compiler

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
cli/: cli.c  main.c
compiler/: scope.c  value.c
compiler-rust/: Cargo.toml
compiler-rust/include/: hunnu_compiler.h
compiler-rust/src/: codegen.rs  lib.rs  main.rs  parser.rs
compiler/ast/: ast.c  ast.h
compiler/i18n/: i18n.c
compiler/interpreter/: builtins.c  builtins.h  interpreter.c  interpreter.h
compiler/lexer/: lexer.c  token.h
compiler/parser/: parser.c
compiler/runtime/: import.c  value.c  value.h
compiler/transpile/: transpile.c
compiler/vm/: compiler.c  compiler.h  vm.c
tests/: CMakeLists.txt  test_scope.c  test_value.c
